--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -6,6 +6,16 @@
             name="albumModel"
             type="com.northcoders.recordshopapp.model.AlbumModel" />
     </data>
+    <androidx.cardview.widget.CardView
+        android:elevation="20dp"
+        android:backgroundTint="@color/material_dynamic_primary80"
+        app:cardCornerRadius="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,6 +28,7 @@
             android:layout_height="wrap_content"
             android:text="@{albumModel.albumName}"
             android:textSize="18sp"
+            android:hint="albumName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -51,4 +62,5 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
